k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaplan-web-caddy
  namespace: kaplan-web
  labels:
    name: kaplan-web-caddy
    app: kaplan-web

spec:
  type: ClusterIP
  selector:
    name: kaplan-web-caddy
  ports:
    - protocol: TCP
      port: 8080
      name: http
    - protocol: TCP
      port: 9253
      name: metrics
